# Bumny

./: .gitignore  CLAUDE.md  README.md  UI_PARITY_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
api/: pyproject.toml
api/tests/: conftest.py  test_bridge.py  test_experiments.py  test_jobs.py  test_locks.py  test_process.py  test_submit.py
api/umui_api/: __init__.py  __main__.py  app.py  dependencies.py  errors.py  schemas.py  schemas_bridge.py  schemas_process.py
api/umui_api/routers/: __init__.py  bridge.py  experiments.py  jobs.py  locks.py  process.py  submit.py
connectors/: pyproject.toml
connectors/tests/: conftest.py  test_config.py  test_ssh_fs.py
connectors/umui_connectors/: __init__.py  config.py  ssh_fs.py
core/: pyproject.toml
core/tests/: conftest.py
core/tests/formats/: test_basis.py  test_expressions.py  test_namelist.py  test_nav_spec.py  test_pairs.py  test_pan.py  test_partition_db.py  test_var_register.py
core/tests/locking/: test_locks.py
core/tests/models/: test_experiment.py  test_job.py  test_lock.py
core/tests/ops/: test_bridge.py  test_experiments.py  test_jobs.py  test_process.py  test_submit.py
core/tests/storage/: test_layout.py
core/umui_core/: __init__.py
core/umui_core/formats/: __init__.py  basis.py  expressions.py  namelist.py  nav_spec.py  pairs.py  pan.py  partition_db.py  var_register.py
core/umui_core/locking/: __init__.py  locks.py
core/umui_core/models/: __init__.py  experiment.py  job.py  lock.py  namelist.py  navigation.py  variable.py  window.py
core/umui_core/ops/: __init__.py  bridge.py  experiments.py  jobs.py  process.py  submit.py
core/umui_core/storage/: __init__.py  app_pack.py  layout.py
docs/: AI_IMPLEMENTATION_GUIDE_UMUI_NEXT.md  CLAUDE_REBUILD.md  CONTRIB.md  RUNBOOK.md  eocene_feasibility.md
fixtures/samples/: aaaa.exp  xqgt.exp  xqjc.exp
fixtures/samples/aaaa/: a.job  b.job  c.job  f.job  g.job  h.job  i.job
fixtures/samples/xqgt/: a.job  b.job  c.job  e.job  h.job  u.job  y.job  z.job
fixtures/samples/xqjc/: a.job
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
ui/e2e/: explorer-crud.spec.ts
ui/src/: app.tsx  main.tsx  router.tsx
ui/src/hooks/: use-basis.ts  use-bridge-edit.ts  use-bridge.ts  use-experiments.ts  use-jobs.ts  use-locks.ts  use-process.ts  use-user.tsx
ui/src/lib/: api-client.ts  diff-utils.ts  expression-evaluator.ts  filter-experiments.ts  query-keys.ts  user-store.ts
ui/src/types/: api.ts  basis.ts  bridge.ts  experiment.ts  job.ts  lock.ts  process.ts
ui/tests/: setup.ts  test-utils.tsx
ui/tests/hooks/: use-bridge-edit.test.tsx  use-bridge.test.tsx  use-experiments.test.tsx  use-jobs.test.tsx  use-locks.test.tsx  use-process.test.tsx  use-user.test.tsx
ui/tests/integration/: bridge-edit-flow.test.tsx  (+2 more)
umui/: CLAUDE_LEGACY.md  um1.1.md  umui_dependencies.md  umui_overview.md
(+1204 files in other folders)
