[project]
name = "umui-api"
version = "0.1.0"
description = "FastAPI REST API for UMUI Next"
requires-python = ">=3.12"
dependencies = [
    "umui-core",
    "umui-connectors",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv.sources]
umui-core = { workspace = true }
umui-connectors = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["umui_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --cov=umui_api --cov-report=term-missing"
