[project]
name = "umui-connectors"
version = "0.1.0"
description = "SSH and local filesystem connectors for UMUI Next"
requires-python = ">=3.12"
dependencies = [
    "umui-core",
    "asyncssh>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv.sources]
umui-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["umui_connectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --cov=umui_connectors --cov-report=term-missing"
