[project]
name = "umui-core"
version = "0.1.0"
description = "Core domain model, parsers, storage, and locking for UMUI Next"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["umui_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --cov=umui_core --cov-report=term-missing"
